<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<CheckBoxPreference
		android:key="soundfx"
		android:title="@string/soundfx"
		android:summary="@string/soundfxsum"
		android:defaultValue="true" />
	<ListPreference android:key="minutes"
 	   android:title="@string/gamelength"
 	   android:summary="@string/gamelengthsum"
 	   android:entries="@array/minutes12345"
 	   android:entryValues="@array/seconds12345"
 	   android:defaultValue="180" />
	<CheckBoxPreference
		android:key="rapid_guns"
		android:title="@string/missiles"
		android:summary="@string/missilessum"
		android:defaultValue="true" />
	<CheckBoxPreference
		android:key="rapid_dc"
		android:title="@string/dc"
		android:summary="@string/dcsum"
		android:defaultValue="false" />
	<ListPreference android:key="num_planes"
 	   android:title="@string/plane"
 	   android:summary="@string/planesum"
 	   android:entries="@array/labels1to10"
 	   android:entryValues="@array/nums1to10"
 	   android:defaultValue="3" />
	<ListPreference android:key="num_subs"
 	   android:title="@string/sub"
 	   android:summary="@string/subsum"
 	   android:entries="@array/labels1to10"
 	   android:entryValues="@array/nums1to10"
 	   android:defaultValue="3" />
	<ListPreference android:key="skins"
 	   android:title="Skins"
 	   android:summary="Try using a different Look and Feel"
 	   android:entries="@array/skin_lables"
 	   android:entryValues="@array/skin_values"
 	   android:defaultValue="1" />
</PreferenceScreen>